--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,17 @@ charset-normalizer==3.4.4
 click==8.3.0
 colorama==0.4.6
 Flask==3.1.2
+flask-cors==6.0.1
 Flask-WTF==1.2.2
 idna==3.11
+iniconfig==2.1.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.3
+packaging==25.0
+pluggy==1.6.0
+Pygments==2.19.2
+pytest==8.4.2
 python-dotenv==1.1.1
 requests==2.32.5
 urllib3==2.5.0
